Dummy_Package_for_scratch_org/main/default/objects/Function__c/Function__c.object-meta.xml
<CustomObject>
    <label>Function</label>
    <nameField>
        <label>Function Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Functions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>