Dummy_Package_for_scratch_org/main/default/objects/Function__c/fields/ApexClass__c.field-meta.xml
<CustomField>
    <fullName>ApexClass__c</fullName>
    <description>Handler format: ClassName
The class must implement the MCCallBack interface.</description>
    <inlineHelpText>Handler format: ClassName
The class must implement the MCCallBack interface.</inlineHelpText>
    <label>ApexClass</label>
    <length>255</length>
    <type>Text</type>
</CustomField>