Dummy_Package_for_scratch_org/main/default/objects/Function__c/fields/API_Name__c.field-meta.xml
<CustomField>
    <fullName>API_Name__c</fullName>
    <description>Unique name that identifies this function. The function result records will contain this API Name in the job type field for filtering these results in reports and dashboards.</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique name that identifies this function. The function result records will contain this API Name in the job type field for filtering these results in reports and dashboards.</inlineHelpText>
    <label>API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>