Dummy_Package_for_scratch_org/main/default/objects/Function__c/fields/Callback_Type__c.field-meta.xml
<CustomField>
    <fullName>Callback_Type__c</fullName>
    <description>Trigger a Flow or Apex class each time a function execution completes. This trigger happens when the function result status changes to Success or Failed.</description>
    <inlineHelpText>Trigger a Flow or Apex class each time a function execution completes. This trigger happens when the function result status changes to Success or Failed.</inlineHelpText>
    <label>Callback Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ApexClass</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>