Dummy_Package_for_scratch_org/main/default/objects/Function__c/fields/FlowHandler__c.field-meta.xml
<CustomField>
    <fullName>FlowHandler__c</fullName>
    <description>Handler format: FlowAPIName</description>
    <inlineHelpText>Handler format: FlowAPIName</inlineHelpText>
    <label>FlowHandler</label>
    <length>255</length>
    <type>Text</type>
</CustomField>