Dummy_Package_for_scratch_org/main/default/objects/Function__c/fields/Image_Name__c.field-meta.xml
<CustomField>
    <fullName>Image_Name__c</fullName>
    <description>The docker image name provided by Copado. You will find available image paths in the Copado documentation. An image name is made up of slash-separated name components, prefixed by a registry hostname.</description>
    <inlineHelpText>The docker image name provided by Copado. You will find available image paths in the Copado documentation. An image name is made up of slash-separated name components, prefixed by a registry hostname.</inlineHelpText>
    <label>Image Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>