Dummy_Package_for_scratch_org/main/default/objects/Function__c/fields/Parameters__c.field-meta.xml
<CustomField>
    <fullName>Parameters__c</fullName>
    <inlineHelpText>This is used to validate if all required parameters are set before calling the execution.</inlineHelpText>
    <label>Parameters</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>