Dummy_Package_for_scratch_org/main/default/objects/Function__c/fields/Script__c.field-meta.xml
<CustomField>
    <fullName>Script__c</fullName>
    <label>Script</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>