Dummy_Package_for_scratch_org/main/default/objects/Function__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <defaultValue>&quot;Custom&quot;</defaultValue>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
                <default>true</default>
                <label>Custom</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>