Dummy_Package_for_scratch_org/main/default/objects/Function__c/validationRules/Function_Name_must_Be_Alpha_Numeric.validationRule-meta.xml
<ValidationRule>
    <fullName>Function_Name_must_Be_Alpha_Numeric</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX( API_Name__c ,&apos;[a-zA-Z_][a-zA-Z0-9_]*&apos;))</errorConditionFormula>
    <errorDisplayField>API_Name__c</errorDisplayField>
    <errorMessage>Api name can only contain alphanumeric characters and must begin with a letter</errorMessage>
</ValidationRule>