Dummy_Package_for_scratch_org/main/default/objects/Function__c/validationRules/Script_must_contain_a_value.validationRule-meta.xml
<ValidationRule>
    <fullName>Script_must_contain_a_value</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISNEW()),
ISBLANK(TRIM(Script__c))
)</errorConditionFormula>
    <errorMessage>Script cannot be empty.</errorMessage>
</ValidationRule>