Dummy_Package_for_scratch_org/main/default/objects/Function__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Description__c</columns>
    <columns>API_Name__c</columns>
    <columns>Image_Name__c</columns>
    <columns>Callback_Type__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>